added some custom css changes. made main logo responsive. added about me bio. added all posts from facebook.

--- a/content/themes/flaty-5/partials/header/default.hbs
+++ b/content/themes/flaty-5/partials/header/default.hbs
@@ -3,7 +3,7 @@
         <div class="navbar-header">
             {{#if @blog.logo}}
             <a class="navbar-brand logo-img" href="{{@blog.url}}">
-                <img src="{{@blog.logo}}" alt="{{@blog.title}}" title="{{@blog.title}}"/>
+                <img class="main-logo" src="{{@blog.logo}}" alt="{{@blog.title}}" title="{{@blog.title}}"/>
             </a>
             {{else}}
             <a class="navbar-brand logo-text" href="{{@blog.url}}">{{@blog.title}}</a>
