--- a/content/themes/flaty-5/assets/css/custom.css
+++ b/content/themes/flaty-5/assets/css/custom.css
@@ -2,3 +2,75 @@ div.fb-page.fb_iframe_widget{
 	margin-bottom:4rem;
 }
 
+i.fa.fa-instagram{
+	background: #517FA4;
+
+}
+
+li.instagram{
+	background: #517FA4;
+	border-color: #517FA4;
+}
+
+ul.social li.instagram {
+	border-color: #517FA4;
+}
+
+div.widget-about-me{
+	height:42rem;
+}
+
+.widget.about-me .widget-content .flip-container .flip .front .avatar img {
+	width:190px;
+}
+
+li a:hover {	
+	text-decoration: none;
+	color: #aaf;
+	text-shadow: none;
+	-webkit-transition: 500ms linear 0s;
+	-moz-transition: 500ms linear 0s;
+	-o-transition: 500ms linear 0s;
+	transition: 500ms linear 0s;
+	outline: 0 none;
+	color: #fff;
+	text-shadow: -1px 1px 8px #ffc, 1px -1px 8px #fff;
+}
+
+
+/*li a {	
+	text-decoration: none;
+	color: #aaf;
+	text-shadow: none;
+	-webkit-transition: 500ms linear 0s;
+	-moz-transition: 500ms linear 0s;
+	-o-transition: 500ms linear 0s;
+	transition: 500ms linear 0s;
+	outline: 0 none;
+	color: #fff;
+	text-shadow: 0px 0px 1px #FFC, 1px 0px 2px #FFF;
+}*/
+
+.main-logo{
+	max-width: 100%;
+  	max-height: 100%;
+}
+
+a.navbar-brand.logo-img img {
+	max-width: 100%;
+  	max-height: 100%;
+}
+
+.post-content .post-photo:nth-child(n+2) {
+	max-width: 32%;
+}
+
+div.bio{
+	padding: 2rem;
+  	font-size: 17px;
+  	line-height: 1.55;
+  	}
+
+.widget .widget-content p {
+  text-align: initial;
+}
