--- a/content/themes/flaty-5/default.hbs
+++ b/content/themes/flaty-5/default.hbs
@@ -9,7 +9,10 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="MobileOptimized" content="320" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:regular,italic,700' rel='stylesheet' type='text/css'> {{! Change google font here }}        
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:regular,italic,700' rel='stylesheet' type='text/css'> {{! Change google font here }}
+
+    <link rel="shortcut icon" href="{{asset "/LILT-favicon2.ico"}}">
+
     <link rel="stylesheet" type="text/css" href="{{asset "css/style.min.css"}}"/>
     <link rel="stylesheet" type="text/css" href="{{asset "css/custom.css"}}"/>
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
