--- a/content/themes/flaty-5/partials/comment/facebook.hbs
+++ b/content/themes/flaty-5/partials/comment/facebook.hbs
@@ -5,7 +5,7 @@
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
         js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=YOUR_FACEBOOK_APP_ID";
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=641682619241422";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
 </script>
