--- a/content/themes/flaty-5/partials/misc/social-icons.hbs
+++ b/content/themes/flaty-5/partials/misc/social-icons.hbs
@@ -1,10 +1,10 @@
 <ul class="social {{#if custom_class}}{{custom_class}}{{/if}}">
-    <li class="twitter">
-        <a href="https://twitter.com/loucaruso" target="_blank" title="Twitter"> <i class="fa fa-twitter"></i>
+     <li class="facebook">
+        <a href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422" target="_blank" title="Facebook"> <i class="fa fa-facebook"></i>
         </a>
     </li>
-    <li class="facebook">
-        <a href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422" target="_blank" title="Facebook"> <i class="fa fa-facebook"></i>
+    <li class="twitter">
+        <a href="https://twitter.com/loucaruso" target="_blank" title="Twitter"> <i class="fa fa-twitter"></i>
         </a>
     </li>
     <li class="google">
@@ -12,6 +12,17 @@
             <i class="fa fa-google-plus"></i>
         </a>
     </li>
+      <li class="pinterest">
+        <a href="https://www.pinterest.com/Loucaruso/" target="_blank" title="Pinterest">
+            <i class="fa fa-pinterest"></i>
+        </a>
+    </li>
+      <li class="instagram">
+        <a href="https://instagram.com/loucaruso1/" target="_blank" title="Instagram">
+            <i class="fa fa-instagram"></i>
+        </a>
+    </li>
+
   <!--   <li class="linkedin">
       <a href="#" target="_blank" title="Linkedin">
           <i class="fa fa-linkedin"></i>
