--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -2,6 +2,7 @@
 {{>widget/about-me}}
 <div class="widget"><div class="fb-page" data-href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts"><a href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts">Long Island Lou Tequila</a></blockquote></div></div></div>
 {{>widget/recent-tweets widget_title="Recent Tweets" twitter_user_url="https://twitter.com/loucaruso" twitter_widget_id="596485994402164737"}}
+{{>widget/instagram widget_title="Instagram Stream" user_name="loucaruso1" api_token="518686459.9d1fadd.b2bb7107f2a745a78c991ddec9f0b161" api_clientid="9d1fadd22dc942e5a7c75f409fac0cc0" display="12" cols="3" show_follow_box="true"}}
 {{>widget/recent-posts widget_title="Recent Posts" display="10" show_desc="true" show_pubdate="true"}}
 <div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- DAD -->
