--- a/content/themes/flaty-5/partials/widget/about-me.hbs
+++ b/content/themes/flaty-5/partials/widget/about-me.hbs
@@ -15,6 +15,11 @@
 		</div>
 		<div class="flip-data">
 			<div class="back">
+				<div class="bio">
+				<p>I'm a Tequila/Agave Connoisseur, Taster & Reviewer from Long Island, NY. I want to teach others what I know about ALL Agave spirits, keeping it simple and fun!
+				</p>
+				</div>
+
 				<div class="content">
 					<h3 class="title">My Links</h3>
 					<ul class="social">
