--- a/content/themes/flaty-5/default.hbs
+++ b/content/themes/flaty-5/default.hbs
@@ -21,8 +21,7 @@
 </head>
 <body class="{{body_class}} pattern {{block "customBodyClass"}} {{block "postList"}}"    
     data-uppercase="true"    
-    data-infinite-scroll="true"
-    >
+    data-infinite-scroll="false">
     <div id="fb-root"></div>
     <!--[if lt IE 9]>
     <div class="outdated-frame">
