--- a/content/themes/flaty-5/partials/footer/three-columns.hbs
+++ b/content/themes/flaty-5/partials/footer/three-columns.hbs
@@ -22,6 +22,8 @@
 			Copyright &copy; 2015 <a href="/">{{@blog.title}}</a> All Rights Reserved.
 			<br/>
 			Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a>
+			<br/>
+			Created by <a class="daniel-caruso" href="http://daniel-caruso.com">© Daniel Caruso</a>
 		</div>
 	</div>
 </footer>
