--- a/content/themes/flaty-5/partials/header/default.hbs
+++ b/content/themes/flaty-5/partials/header/default.hbs
@@ -9,7 +9,7 @@
             <a class="navbar-brand logo-text" href="{{@blog.url}}">{{@blog.title}}</a>
             {{/if}}
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-nav">
-                <span>Navigation</span> <i class="fa fa-tasks"></i>
+                {{!-- <span>Navigation</span> --}} <i class="fa fa-tasks"></i>
             </button>
         </div>        
         <div class="social-top">
