--- a/content/themes/flaty-5/partials/intro/home.hbs
+++ b/content/themes/flaty-5/partials/intro/home.hbs
@@ -10,3 +10,10 @@
 		</div>
 	</div>
 </section>
+  </div>
+         <div class="color" style="background:#DC7075">
+  </div>
+  
+  <div class="dad">
+  {{>widget/about-me}}
+  </div>
