--- a/content/themes/flaty-5/partials/intro/tag.hbs
+++ b/content/themes/flaty-5/partials/intro/tag.hbs
@@ -4,15 +4,18 @@
 			<div class="col-md-12">
 				<div class="intro-text">
 					<h1>{{tag.name}}</h1>
-					<h3>
+				{{!-- 	<h3>
 					{{#if tag.description}}
 						{{tag.description}}
 	        		{{else}}
 						{{plural pagination.total empty='No Post' singular='Discover % Post' plural='Discover % Posts'}} with &#8220;{{tag.name}}&#8221; Tag.
 					{{/if}}
-					</h3>	
+					</h3> --}}	
 				</div>
 			</div>
 		</div>
 	</div>
 </section>
+</div>
+    <div class="color" style="background:#DC7075">
+</div>
