--- a/content/themes/flaty-5/partials/loop/default.hbs
+++ b/content/themes/flaty-5/partials/loop/default.hbs
@@ -8,7 +8,9 @@
 		<div class="post-media">
 			{{#if image}}
 			<p>
-				<img src="{{image}}" alt="{{{title}}}" class="img-responsive"/>	            		            		            	
+				<a href="{{url}}">
+					<img src="{{image}}" alt="{{{title}}}" class="img-responsive"/>
+				</a>	            		            		            	
 			</p>
 			<div class="mask">
 				<a class="preview magnific-popup" href="{{image}}">
