--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -2,7 +2,7 @@
 {{>widget/about-me}}
 <div class="widget"><div class="fb-page" data-href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts"><a href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts">Long Island Lou Tequila</a></blockquote></div></div></div>
 {{>widget/recent-tweets widget_title="Recent Tweets" twitter_user_url="https://twitter.com/loucaruso" twitter_widget_id="596485994402164737"}}
-{{>widget/instagram widget_title="Instagram Stream" user_name="loucaruso1" api_token="518686459.9d1fadd.b2bb7107f2a745a78c991ddec9f0b161" api_clientid="9d1fadd22dc942e5a7c75f409fac0cc0" display="12" cols="3" show_follow_box="true"}}
+{{>widget/instagram widget_title="Instagram Stream" user_name="longislandlou" api_token="518686459.9d1fadd.b2bb7107f2a745a78c991ddec9f0b161" api_clientid="9d1fadd22dc942e5a7c75f409fac0cc0" display="12" cols="3" show_follow_box="true"}}
 {{>widget/recent-posts widget_title="Recent Posts" display="10" show_desc="true" show_pubdate="true"}}
 <div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- DAD -->
@@ -17,4 +17,3 @@
 </div>
 {{!>widget/google-plus-badge gpage_url="https://plus.google.com/115618351539604391074" custom_class="full-box"}}
 {{>widget/social widget_title="Stay Connected"}}
-{{>widget/text widget_title="Text Widget" text_content="<p>Put any text here, <strong>html tags</strong> also support</p>Cred listicle trust fund 8-bit Blue Bottle, tousled flannel pickled Neutra hoodie High Life. Meggings Pinterest master cleanse, fanny pack aesthetic small batch gluten-free try-hard pop-up Williamsburg. Meggings aesthetic pour-over mlkshk DIY. Sustainable paleo freegan, listicle normcore drinking vinegar crucifix mlkshk quinoa Echo Park scenester Helvetica."}}
