--- a/content/themes/flaty-5/partials/widget/about-me.hbs
+++ b/content/themes/flaty-5/partials/widget/about-me.hbs
@@ -38,6 +38,16 @@
 	                            <i class="fa fa-google-plus"></i>
 	                        </a>
 	                    </li>
+	                    <li class="pinterest">
+        					<a href="https://www.pinterest.com/Loucaruso/" target="_blank" title="Pinterest">
+            					<i class="fa fa-pinterest"></i>
+        					</a>
+    					</li>
+      					<li class="instagram">
+        					<a href="https://instagram.com/loucaruso1/" target="_blank" title="Instagram">
+            					<i class="fa fa-instagram"></i>
+        					</a>
+    					</li>
 	               <!--      <li class="linkedin">
 	                   <a href="#" target="_blank" title="Linkedin">
 	                       <i class="fa fa-linkedin"></i>
