--- a/content/themes/flaty-5/post.hbs
+++ b/content/themes/flaty-5/post.hbs
@@ -47,7 +47,7 @@
                                         {{#if bio}}
                                             {{bio}}
                                         {{else}}
-                                            The author didnt add any Information to his profile yet
+                                            I'm a Tequila/Agave Connoisseur, Taster & Reviewer from Long Island, NY. I want to teach others what I know about ALL Agave spirits, keeping it simple and fun!
                                         {{/if}}
                                     </p>
                                 </div>
