--- a/content/themes/flaty-5/partials/footer/default.hbs
+++ b/content/themes/flaty-5/partials/footer/default.hbs
@@ -7,6 +7,8 @@
 			Copyright &copy; 2015 <a href="/">Long Island Lou Tequila</a> All Rights Reserved.
 			<br/>
 			Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a>
+			<br/>
+			Created by <a class="daniel-caruso" href="http://daniel-caruso.com">Daniel Caruso</a>
 		</div>
 	</div>
 </footer>
