--- a/content/themes/flaty-5/partials/header/style3.hbs
+++ b/content/themes/flaty-5/partials/header/style3.hbs
@@ -20,6 +20,10 @@
         <div class="container">
             <div class="row">
                 <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-nav">
+                        {{!-- <span>Navigation</span> --}} <i class="fa fa-tasks"></i>
+                    </button>
+
                     {{#if @blog.logo}}
                     <a class="navbar-brand logo-img" href="{{@blog.url}}">
                         <img src="{{@blog.logo}}" alt="{{@blog.title}}" title="{{@blog.title}}"/>
@@ -27,9 +31,7 @@
                     {{else}}
                     <a class="navbar-brand logo-text" href="{{@blog.url}}">{{@blog.title}}</a>
                     {{/if}}
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".main-nav">
-                        <span>Navigation</span> <i class="fa fa-tasks"></i>
-                    </button>
+                    
                 </div>                        
                 {{!-- <div class="search-area">
                     <div class="banner-search-form">
@@ -46,6 +48,8 @@
                     </div>
                 </div> --}}
             </div>
+        </div>
+         <div class="color" style="background:#DC7075">
         </div>
     </div>
     
