--- a/content/themes/flaty-5/partials/footer/three-columns.hbs
+++ b/content/themes/flaty-5/partials/footer/three-columns.hbs
@@ -8,8 +8,8 @@
 				<div class="col-md-4">
 					{{>widget/tags widget_title="Tag Cloud" style="cloud"}}
 				</div>
-				<div class="col-md-4">
-					{{>widget/flickr widget_title="Flickr Stream" user_id="36587311@N08" display="8" cols="4"}}
+				<div class="col-md-4">					
+				{{>widget/newsletter2}}
 				</div>
 			</div>
 		</div>
