--- a/content/themes/flaty-5/tag.hbs
+++ b/content/themes/flaty-5/tag.hbs
@@ -1,5 +1,13 @@
 {{!< default}}
 {{>intro/tag}}
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.3";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 <main class="body-content" role="main">
 	<div class="container">
 		<div class="row">
