--- a/content/themes/flaty-5/partials/widget/newsletter.hbs
+++ b/content/themes/flaty-5/partials/widget/newsletter.hbs
@@ -1,11 +1,6 @@
-<div class="widget tag-widget>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- DAD4 -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:228px;height:190px"
-     data-ad-client="ca-pub-4468771716232038"
-     data-ad-slot="9388807501"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+<div class="widget tequila-ocho">
+
+<a href="http://ochotequila.com/us/"><img src="http://tequilasource.com/tequilaocho/pics/tequila_ocho_single_estate2.jpg"/></a>
+
+
 </div>
