--- a/content/themes/flaty-5/partials/sidebar/default.hbs
+++ b/content/themes/flaty-5/partials/sidebar/default.hbs
@@ -3,10 +3,22 @@
 <div class="widget"><div class="fb-page" data-href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts"><a href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts">Long Island Lou Tequila</a></blockquote></div></div></div>
 {{>widget/recent-tweets widget_title="Recent Tweets" twitter_user_url="https://twitter.com/loucaruso" twitter_widget_id="596485994402164737"}}
 {{>widget/instagram widget_title="Instagram Stream" user_name="longislandlou" api_token="518686459.9d1fadd.b2bb7107f2a745a78c991ddec9f0b161" api_clientid="9d1fadd22dc942e5a7c75f409fac0cc0" display="12" cols="3" show_follow_box="true"}}
-{{>widget/recent-posts widget_title="Recent Posts" display="10" show_desc="true" show_pubdate="true"}}
-<div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+<div class="widget tequila.net"><a href="http://www.tequila.net/"><img src="http://tequilaofthemonth.com/wp-content/uploads/2014/02/tequila-net-logo.png" class="alignnone" width="350" height="60" /></a></div>
+<div class="widget tequila-match"><a href="http://www.tequilamatchmaker.com/"><img src="http://tequilamatchmaker.com/images/logo.png" class="alignnone"/></a></div>
+<div class="widget zee-tequila"><a href="http://www.zeetequila.com/"><img src="https://www.zeetequila.com/product_images/website_logo.png" class="alignnone"/></a></div>
+<div class="widget mr-latino"><a href="http://www.mrlatinomagazine.com/nyc/"><img src="https://pbs.twimg.com/profile_images/646471873/linkswithurl.jpg"/></a></div>
+<div class="widget fortaleza"><a href="http://www.tequilafortaleza.com/"><img src="http://static1.squarespace.com/static/53c76cc7e4b06ab65b2412ed/53edc08ce4b0b335a20d4a2a/53edc6b1e4b03190fb1ee91b/1408092470088/black-banner-fortaleza.jpg?format=300w"/></a></div>
+<div class="widget casa-noble"><a href="http://www.casanoble.com/"><img src="https://libertylighthousegroup.files.wordpress.com/2013/09/casanoble-nyt-no1blanco.jpg"/></a></div>
+<div class="widget g4"><a href="https://www.facebook.com/TequilaG4"><img src="https://scontent-atl1-1.xx.fbcdn.net/hphotos-xtf1/v/t1.0-9/10402402_671135862964999_7229663608499956765_n.jpg?oh=6bab57c9f0349af05e612e720306b3da&oe=5621DD0D"/></a></div>
+<div class="widget t1"><a href="http://www.t1tequila.com/"><img src="https://pbs.twimg.com/profile_images/1934754276/T1Profile.jpg"/></a></div>
+<div class="widget el-tesoro"><a href="http://www.eltesorotequila.com/"><img src="http://tressf.com/wp-content/uploads/2011/09/El-Tesoro-Logo.jpg"/></a></div>
+<div class="widget villa-lobos"><a href="https://www.facebook.com/villalobostequila"><img src="https://pbs.twimg.com/profile_images/595660016784416768/FYL51BhX.jpg"/></a></div>
+
+<!-- <div class="widget"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
+
 <!-- DAD -->
-<ins class="adsbygoogle"
+<!-- <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-4468771716232038"
      data-ad-slot="2622420302"
@@ -14,6 +26,7 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</div>
+</div> -->
+{{!>widget/recent-posts widget_title="Recent Posts" display="6" show_desc="true" show_pubdate="true"}}
 {{!>widget/google-plus-badge gpage_url="https://plus.google.com/115618351539604391074" custom_class="full-box"}}
 {{>widget/social widget_title="Stay Connected"}}
