--- a/content/themes/flaty-5/partials/footer/three-columns.hbs
+++ b/content/themes/flaty-5/partials/footer/three-columns.hbs
@@ -2,14 +2,14 @@
 	<div class="footer-widget">
 		<div class="container">	
 			<div class="row">		
-				<div class="col-md-4">					
-				{{>widget/newsletter}}
-				</div>
+				<div class="col-md-4">
+				{{>widget/logo widget_title="Logo"}}					
+      			</div>
 				<div class="col-md-4">
 				{{>widget/tags widget_title="Tag Cloud" style="cloud"}}
 				</div>
 				<div class="col-md-4">					
-				{{>widget/newsletter2}}
+				{{>widget/social widget_title="Stay Connected"}}
 				</div>
 			</div>
 		</div>
@@ -24,6 +24,12 @@
 			Proudly published with <a class="icon-ghost" href="http://ghost.org">Ghost</a>
 			<br/>
 			Created by <a class="daniel-caruso" href="http://daniel-caruso.com">© Daniel Caruso</a>
+			<br/>
+			<!-- SmallSeoTools Code START -->
+<!-- <a href="http://smallseotools.com/visitor-hit-counter/" target="_blank" title="Visitor Counter">
+<img src="http://smallseotools.com/visitor-counter/counter.php?code=7eb1d7cabd50a38472bb5eda86f5542f&style=0008&pad=5&type=page&initCount=1"title="Visitor Counter" Alt="Visitor Counter" border="0">
+</a> -->
+<!-- SmallSeoTools Code END -->
 		</div>
 	</div>
 </footer>
