--- a/content/themes/flaty-5/partials/misc/social-icons.hbs
+++ b/content/themes/flaty-5/partials/misc/social-icons.hbs
@@ -12,14 +12,19 @@
             <i class="fa fa-google-plus"></i>
         </a>
     </li>
+    <li class="youtube">
+        <a href="https://www.youtube.com/channel/UCRF8t5QNnP1FBdohOVuz3lg" target="_blank" title="Youtube">
+            <img src="/assets/img/youtube-square.png">
+        </a>
+    </li>
+    <li class="instagram">
+        <a href="https://instagram.com/longislandlou/" target="_blank" title="Instagram">
+            <i class="fa fa-instagram"></i>
+        </a>
+    </li>
       <li class="pinterest">
         <a href="https://www.pinterest.com/Loucaruso/" target="_blank" title="Pinterest">
             <i class="fa fa-pinterest"></i>
-        </a>
-    </li>
-      <li class="instagram">
-        <a href="https://instagram.com/longislandlou/" target="_blank" title="Instagram">
-            <i class="fa fa-instagram"></i>
         </a>
     </li>
 
