--- a/content/themes/flaty-5/partials/widget/facebook-like.hbs
+++ b/content/themes/flaty-5/partials/widget/facebook-like.hbs
@@ -1,9 +1,8 @@
-<div class="widget facebook-like{{#unless widget_title}} no-title{{/unless}}{{#if custom_class}} {{custom_class}}{{/if}}">
+<div class="widget facebook{{#unless widget_title}} no-title{{/unless}}{{#if custom_class}} {{custom_class}}{{/if}}">
 	{{#if widget_title}}
 	<h3 class="widget-title">{{{widget_title}}}</h3>
 	{{/if}}
 	<div class="widget-content">		
-		<div class="sf-fb-like-box" data-pageurl="{{fanpage_url}}" data-show-faces="{{show_faces}}"  data-header="{{show_header}}" data-stream="{{show_stream}}" data-show-border="{{show_border}}">
-		</div>
+		<div class="fb-page" data-href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="true"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts"><a href="https://www.facebook.com/pages/Long-Island-Lou-Tequila/641682619241422?fref=ts">Long Island Lou Tequila</a></blockquote></div></div>
 	</div>
 </div>
