--- a/content/themes/flaty-5/partials/widget/about-me.hbs
+++ b/content/themes/flaty-5/partials/widget/about-me.hbs
@@ -34,18 +34,23 @@
 	                        </a>
 	                    </li>
 	                    <li class="google">
-	                        <a href="#" target="_blank" title="Google">
+	                        <a href="https://plus.google.com/u/0/113239077182428725693/posts" target="_blank" title="Google">
 	                            <i class="fa fa-google-plus"></i>
 	                        </a>
 	                    </li>
-	                    <li class="pinterest">
-        					<a href="https://www.pinterest.com/Loucaruso/" target="_blank" title="Pinterest">
-            					<i class="fa fa-pinterest"></i>
+	                    <li class="youtube">
+        					<a href="https://www.youtube.com/channel/UCRF8t5QNnP1FBdohOVuz3lg" target="_blank" title="YouTube">
+            					<img src="/assets/img/youtube-square.png">
         					</a>
     					</li>
       					<li class="instagram">
         					<a href="https://instagram.com/longislandlou/" target="_blank" title="Instagram">
             					<i class="fa fa-instagram"></i>
+        					</a>
+    					</li>
+	                    <li class="pinterest">
+        					<a href="https://www.pinterest.com/Loucaruso/" target="_blank" title="Pinterest">
+            					<i class="fa fa-pinterest"></i>
         					</a>
     					</li>
 	               <!--      <li class="linkedin">
